[metadata]
name=CustomPackage
version=0.0.1
author=Adam Lany
description=Just example of custom python package
long_description=file: README.md
long_description_content_type=text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires= >=3.9.1
include_package_data=True

[options.packages.find]
include=CustomPackage